  	* device/lib/div.c,
  	  device/lib/ldiv.c,
  	  device/include/stdlib.h
  	  Add div and ldiv to the mos6502 standard library.
  	* device/lib/_divulonglong.c
  	  Trivial spelling fix.
  	* sdas/as6500/r6500.h,
  	  sdas/as6500/r65adr.c,
  	  sdas/as6500/r65mch.c,
  	  sdas/as6500/pst.c
  	  Merge several minor changes from upstream asxxxx 5.50
  	    
2023-12-02 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c,
  	  support/regression/tests/structreturn.c.in,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
  	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-struct-ret-1.c,
  	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-pr60017.c,
  	  support/regression/tests/gcc-torture-execute-920625-1.c,
	  support/regression/tests/funptrsstructreturn.c,
  	  support/regression/tests/div.c,
	  support/regression/tests/bug-3385.c,
	  support/regression/tests/bug-3368.c,
	  support/regression/tests/bug-2776.c,
	  support/regression/tests/bigreturn-remat.c.in,
	  support/regression/MakeList,
  	  Implement IPUSH_VALUE_AT_ADDRESS iCode and enable corresponding regression tests.
  	  Disable failing tests for mos65c02.
	* src/mos6502/gen.c
	  Make sure result is a register before dereferencing the pointer (fix bug #3631)
  	
2023-12-02 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/main.c
	  Correct opcode ordering.
	  Fix get_model() reporting.
   	* src/mos6502/gen.c
	  Make mos65c02 register transfer code use phx/phy/plx/ply.
   	* src/mos6502/gen.c,
   	  src/hc08/gen.c
	  Reformat comments to match other ports.

2023-12-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/ports/pic16/spec.mk:
	  pic16 regression test infrastructure fix, patch by Jonathon Hall.
	* support/regression/tests/sdcccall.c.in:
	  Disable a long long test for pic16, which does not support long long yet, patch by Jonathon Hall.
